# actinia-parallel-plugin

./: .flake8  .gitignore  Makefile  README.md  pyproject.toml  requirements.txt  setup.cfg  setup.py  tests_with_redis.sh
.github/workflows/: flake8.yml  python-publish.yml  test.yml
docker/: Dockerfile  actinia.cfg  docker-compose-test.yml  docker-compose.yml
docker/actinia-parallel-plugin-test/: Dockerfile  actinia-parallel-plugin-test.cfg  run_integration_tests.sh  run_unittests.sh
docker/postgresql_init_data/: gis.sql
src/actinia_parallel_plugin/: __init__.py  endpoints.py  wsgi.py
src/actinia_parallel_plugin/api/: batch.py  job.py  parallel_ephemeral_processing.py  parallel_persistent_processing.py  parallel_processing.py
src/actinia_parallel_plugin/apidocs/: batch.py  helloworld.py  jobs.py  regeldatei.py
src/actinia_parallel_plugin/apidocs/examples/: batchjob_post_response_example.json  (+1 more)
src/actinia_parallel_plugin/core/: batches.py  ephemeral_processing.py  jobs.py  jobtable.py  parallel_processing_job.py  parallel_resource_base.py  persistent_processing.py
src/actinia_parallel_plugin/model/: batch.py  batch_process_chain.py  jobtabelle.py  jobtable.py  response_models.py
src/actinia_parallel_plugin/resources/: config.py  logging.py
test_postbodies/: parallel_ephemeral_processing.json  parallel_processing.json  parallel_processing_soll.json
tests/: test_resource_base.py
tests/integrationtests/: test_00_connections.py  test_helloworld.py  test_parallel_ephemeral_processing.py
tests/unittests/: test_batches.py  test_transformation.py
(+1 files in other folders)
